fix laggy scroll on mobile in prod

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,6 +29,7 @@
 html {
     height: 100%;
     min-height: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -46,6 +47,7 @@ body {
 
     display: flex;
     flex-direction: column;
+    scroll-behavior: smooth;
 }
 
 /* 
